# rust-woocommerce

./: .gitignore  Cargo.toml  LICENSE.md  Makefile.toml  README.md  example_woo.toml
examples/: add_pics.rs  category.rs  customer.rs  data.rs  order.rs  product.rs  variation.rs
src/: config.rs  error.rs  lib.rs
src/controllers/: coupons.rs  customers.rs  data.rs  entities.rs  mod.rs  order_notes.rs  orders.rs  payment_gateways.rs  product_attribute_terms.rs  product_attributes.rs  product_categories.rs  product_reviews.rs  product_shipping_classes.rs  product_tags.rs  product_variations.rs  products.rs  refunds.rs  reports.rs  settings.rs  shipping_methods.rs  shipping_zone_locations.rs  shipping_zone_methods.rs  shipping_zones.rs  system_status.rs  system_status_tools.rs  tax_classes.rs  tax_rates.rs  webhooks.rs
src/models/: coupons.rs  customers.rs  data.rs  mod.rs  order_notes.rs  orders.rs  payment_gateways.rs  product_attribute_terms.rs  product_attributes.rs  product_categories.rs  product_reviews.rs  product_shipping_classes.rs  product_tags.rs  product_variations.rs  products.rs  refunds.rs  reports.rs  setting_options.rs  settings.rs  shipping_methods.rs  shipping_zone_locations.rs  shipping_zone_methods.rs  shipping_zones.rs  system_status.rs  system_status_tools.rs  tax_classes.rs  tax_rates.rs  webhooks.rs
