[package]
name = "rust-woocommerce"
description = "Framework for woocommerce"
version = "0.1.0"
edition = "2021"
authors = ["Ligeron.Ahill"]
license = "MIT"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4.20"
reqwest = {version = "0.11.23", features = ["json", "gzip"]}
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
tokio = {version = "1.35.1", features = ["macros", "rt-multi-thread"]}
