[package]
name = "rust-woocommerce"
description = "Framework for woocommerce"
version = "0.1.1"
edition = "2021"
authors = ["Aleksandr Provotorov <provotorov@inbox.ru>"]
license = "MIT"
rust-version = "1.75"
readme = "README.md"
repository = "https://github.com/LigeronAhill/rust-woocommerce/"
exclude = ["Makefile.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = {version = "0.11.23", features = ["json", "gzip"]}
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
tokio = {version = "1.35.1", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.40"
tl = "0.7.8"
regex = "1.10.3"
anyhow = "1.0.81"
tracing-subscriber = "0.3.18"
url = "2.5.0"
toml = "0.8.12"
